Update and rename secrets.properties.sample to secrets.properties

--- a/secrets.properties
+++ b/secrets.properties
@@ -11,8 +11,8 @@
 # For steps to creating an application, view the Readme.md
 #
 
-CONSUMER_KEY=""
-CONSUMER_SECRET=""
+CONSUMER_KEY="Bqy3qth3JJyM8rR9mwjXQVBvn"
+CONSUMER_SECRET="1g4PUvSPWqQTtYI3V4yirHG2bMlPMhqTDQ32QfwRe4SEuOPyrV"
 
 
 #
@@ -24,7 +24,7 @@ CONSUMER_SECRET=""
 # https://developers.google.com/youtube/android/player/register
 #
 
-YOUTUBE_API_KEY=""
+YOUTUBE_API_KEY="AIzaSyCzjOm9Tr-bUtAjekZBOAVitLwnKNooeGY"
 
 
 #
